# empagliflozin-model

./: .gitignore  .zenodo.json  Dockerfile  README.md  empagliflozin_model.omex  empagliflozin_model_fair.xlsx  pyproject.toml
.github/workflows/: docker.yml  python.yml
models/: empagliflozin_body.md  empagliflozin_body.xml  empagliflozin_body_flat.md  empagliflozin_body_flat.xml  empagliflozin_intestine.md  empagliflozin_intestine.xml  empagliflozin_kidney.md  empagliflozin_kidney.xml  empagliflozin_liver.xml
release-notes/: 0.5.0.md  0.5.1.md  0.5.2.md  0.5.3.md  0.5.4.md
simulations/all/: index.html
simulations/all/Ayoub2017/: Ayoub2017.html  Ayoub2017.json  Ayoub2017_empagliflozin_EMP25.tsv
simulations/all/Brand2012/: Brand2012.html  Brand2012.json  Brand2012_empagliflozin_EMP50_D10.tsv  Brand2012_empagliflozin_EMP50_D5.tsv  Brand2012_empagliflozin_recovery_EMP50_D10.tsv  Brand2012_empagliflozin_recovery_EMP50_D5.tsv  Brand2012_empagliflozin_urine_EMP50_D10.tsv  Brand2012_empagliflozin_urine_EMP50_D5.tsv
simulations/all/Chen2015a/: Chen2015a.html  Chen2015a.json  Chen2015a_C14EMP_blood.tsv  Chen2015a_C14EMP_recovery_feces.tsv  Chen2015a_C14EMP_recovery_feces_urine.tsv  Chen2015a_C14EMP_recovery_urine.tsv  Chen2015a_C14EMP_urine.tsv  Chen2015a_EG_feces.tsv  Chen2015a_EG_plasma.tsv  Chen2015a_EG_urine.tsv  Chen2015a_EMPTOT_feces.tsv  Chen2015a_EMPTOT_feces_urine.tsv  Chen2015a_EMPTOT_plasma.tsv  Chen2015a_EMPTOT_urine.tsv  Chen2015a_EMP_feces.tsv  Chen2015a_EMP_plasma.tsv  Chen2015a_EMP_urine.tsv
simulations/all/Chen2020/: Chen2020.html  Chen2020.json  Chen2020_Fasting_R_EMP10.tsv  Chen2020_Fasting_T_EMP10.tsv  Chen2020_Fed_R_EMP10.tsv  Chen2020_Fed_T_EMP10.tsv
simulations/all/DoseDependencyExperiment/: DoseDependencyExperiment.html  DoseDependencyExperiment.json
simulations/all/ElDash2021/: ElDash2021.html  ElDash2021.json  ElDash2021_amount_evening_S1.tsv  ElDash2021_amount_evening_S10.tsv  ElDash2021_amount_evening_S11.tsv  ElDash2021_amount_evening_S12.tsv  ElDash2021_amount_evening_S13.tsv  (+97 more)
(+495 files in other folders)
