[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "empagliflozin-model"
version = "0.5.1"
description = "Python utilities for computational models in SBML."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name="Ennie Tensil", email="enniejoana@gmail.com"},
    {name="Michelle Elias", email="eliasmic@hu-berlin.de"},
	{name="Matthias König", email="konigmatt@googlemail.com"},
]
maintainers = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "SBML",
    "physiologically based pharmacokinetic/pharmacodynamic model",
    "arterial hypertension",
    "PBPK/PD",
    "empagliflozin",
    "computational modeling",
]
dependencies = [
    "sbmlutils>=0.9.6",
    "sbmlsim @ git+https://github.com/matthiaskoenig/sbmlsim.git@ea4a05dac0dccfe772ddca39ab398a7b2b334085",
]

[project.scripts]
create_nodes = "pkdb_data.management.commands:create_info_nodes_command"
run_empagliflozin = "pkdb_models.models.empagliflozin.run_empagliflozin:main"
fit_empagliflozin = "pkdb_models.models.empagliflozin.fitting.fitting:main"

[project_urls]
Homepage = "https://github.com/matthiaskoenig/empagliflozin-model"
Repository = "https://github.com/matthiaskoenig/empagliflozin-model"
Documentation = "https://github.com/matthiaskoenig/empagliflozin-model"
Issues = "https://github.com/matthiaskoenig/empagliflozin-model/issues"
# Download = "https://pypi.org/project/pkdb_models"

[tool.hatch.build.targets.wheel]
packages = ["src/pkdb_models"]

[tool.hatch.metadata]
allow-direct-references = true

